--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,13 @@
-<form action="/add" method=POST>
+
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+    <p> {{message}} </p>
+{% endfor %}
+{% endif %}
+{% endwith %}
+
+<form action="/add" method="POST">
 
     <input type="text" name="full_name" placeholder="Fullname">
     <input type="text" name="phone" placeholder="phone">
@@ -6,3 +15,27 @@
     <button type="submit"> Save </button>
 
 </form>
+
+<table>
+    <thead>
+        <tr>
+            <td>Fullname</td>
+            <td>Phone</td>
+            <td>Email</td>
+            <td>Operation</td>
+        </tr>
+    </thead>
+    <tbody>
+        {% for contact in contacts %}
+            <tr>
+                <td> {{contact.1}} </td>
+                <td> {{contact.2}} </td>
+                <td> {{contact.3}} </td>
+                <td>
+                    <a href="/edit/{{ contact.0 }}">Edit</a>
+                    <a href="/delete/{{ contact.0 }}">Delete</a>
+                </td>
+            </tr>
+        {% endfor%}
+    </tbody>
+</table>
